--- a/styles/final.css
+++ b/styles/final.css
@@ -502,9 +502,9 @@ body {
         margin-bottom: calc(23px * var(--multiplier-1600));
         padding: 0px calc(10px * var(--multiplier-1600));
     }
-}
+} */
 
-@media screen and (max-width:1440px) {
+@media screen and (max-width:1440px) and (max-width:1918px) {
     .header {
         height: calc(90px * var(--multiplier-1440));
         padding: 0 calc(50px * var(--multiplier-1440)) 0 calc(50px * var(--multiplier-1440));
@@ -531,17 +531,17 @@ body {
     }
     
     .inner-container {   
-        gap: calc(30px * var(--multiplier-1440));
-        margin: calc(20px * var(--multiplier-1440));
+        gap: calc(15px * var(--multiplier-1440));
+        margin: calc(15px * var(--multiplier-1440));
     }
     
     .section1 {
-        height: calc(100px * var(--multiplier-1440));
+        height: calc(90px * var(--multiplier-1440));
     }
     
     .button1 {
         width: calc(539px * var(--multiplier-1440));
-        height: calc(100px * var(--multiplier-1440));
+        height: calc(90px * var(--multiplier-1440));
         padding: calc(47px * var(--multiplier-1440)) auto;
         font-size: calc(16px * var(--multiplier-1440));
         line-height: calc(24px * var(--multiplier-1440));
@@ -563,12 +563,12 @@ body {
     .section2 {
         border-radius: calc(30px * var(--multiplier-1440));
         box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
-        gap: calc(15px * var(--multiplier-1440));
+        gap: calc(10px * var(--multiplier-1440));
         padding: calc(16px * var(--multiplier-1440)) 0;
     }
     
     .section-heading {
-        font-size: calc(30px * var(--multiplier-1440));
+        font-size: calc(28px * var(--multiplier-1440));
     }
     
     .button-group {
@@ -578,7 +578,7 @@ body {
     .primary-btn {
         min-width: calc(250px * var(--multiplier-1440));
         max-width: calc(375px * var(--multiplier-1440));
-        padding: calc(20px * var(--multiplier-1440)) 0px;
+        padding: calc(15px * var(--multiplier-1440)) 0px;
         border-radius: calc(10px * var(--multiplier-1440));
         font-size: calc(35px * var(--multiplier-1440));
         line-height: calc(24px * var(--multiplier-1440));
@@ -597,7 +597,7 @@ body {
         border-radius: calc(30px * var(--multiplier-1440));
         border: 1px solid #363636;
         box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
-        gap: calc(20px * var(--multiplier-1440));
+        gap: calc(10px * var(--multiplier-1440));
         padding: calc(20px * var(--multiplier-1440)) 0;
     }
     
@@ -605,32 +605,32 @@ body {
         border-radius: calc(30px * var(--multiplier-1440));
         border: 1px solid #363636;
         box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
-        gap: calc(20px * var(--multiplier-1440));
+        gap: calc(10px * var(--multiplier-1440));
         padding: calc(20px * var(--multiplier-1440)) 0;
     }
     
     .location {
         gap: calc(20px * var(--multiplier-1440));
-        padding-bottom: calc(38px * var(--multiplier-1440));
-        height: calc(180px * var(--multiplier-1440));
+        /* padding-bottom: calc(38px * var(--multiplier-1440)); */
+        height: calc(100px * var(--multiplier-1440));
     }
     
     .address {
-        font-size: calc(25px * var(--multiplier-1440));
+        font-size: calc(22px * var(--multiplier-1440));
     }
     
     .emergency-text {
-        font-size: calc(25px * var(--multiplier-1440));
-        height: calc(180px * var(--multiplier-1440));
+        font-size: calc(22px * var(--multiplier-1440));
+        height: calc(100px * var(--multiplier-1440));
     }
     
     .bottom-text {
         margin-bottom: calc(23px * var(--multiplier-1440));
         padding: 0px calc(10px * var(--multiplier-1440));
     }
-} */
+}
 
-@media screen and (min-width:1366px) and (max-width:1918px) {
+@media screen and (max-width:1366px) {
     .header {
         height: calc(90px * var(--multiplier-1366));
         padding: 0 calc(50px * var(--multiplier-1366)) 0 calc(50px * var(--multiplier-1366));
