--- a/styles/clock.css
+++ b/styles/clock.css
@@ -98,7 +98,7 @@
     border: 0;
 } */
 
-@media screen and (min-width:1366px) and (max-width:1918px) {
+@media screen and (max-width:1366px) {
 
     .container .clock {
         height: calc(300px * var(--multiplier-1366));
