--- a/styles/final.css
+++ b/styles/final.css
@@ -504,7 +504,7 @@ body {
     }
 } */
 
-@media screen and (max-width:1440px) and (max-width:1918px) {
+@media screen and (min-width:1440px) and (max-width:1918px) {
     .header {
         height: calc(90px * var(--multiplier-1440));
         padding: 0 calc(50px * var(--multiplier-1440)) 0 calc(50px * var(--multiplier-1440));
