--- a/styles/final.css
+++ b/styles/final.css
@@ -625,6 +625,7 @@ body {
     }
     
     .bottom-text {
+        margin-top: calc(10px * var(--multiplier-1440));
         margin-bottom: calc(23px * var(--multiplier-1440));
         padding: 0px calc(10px * var(--multiplier-1440));
     }
