--- a/styles/final.css
+++ b/styles/final.css
@@ -88,6 +88,11 @@ body {
     background: #8C2828;
 }
 
+.text-clock{
+    width: 57.857px;
+    height: 57.857px;
+}
+
 .button-text {
     display: flex;
     justify-content: center;
@@ -534,6 +539,7 @@ body {
     }
     
     .main {
+        min-height: 90vh;
         padding: calc(20px * var(--multiplier-1440));
     }
     
@@ -549,10 +555,15 @@ body {
     .button1 {
         width: calc(539px * var(--multiplier-1440));
         height: calc(100px * var(--multiplier-1440));
-        padding: calc(47px * var(--multiplier-1440)) auto;
+        padding: calc(40px * var(--multiplier-1440)) auto;
         font-size: calc(16px * var(--multiplier-1440));
         line-height: calc(24px * var(--multiplier-1440));
         border-radius: calc(40px * var(--multiplier-1440));
+    }
+
+    .btn-clock{
+        width: calc(57.857px * var(--multiplier-1440));;
+        height: calc(57.857px * var(--multiplier-1440));;
     }
     
     .button-text {
@@ -585,7 +596,7 @@ body {
     .primary-btn {
         min-width: calc(250px * var(--multiplier-1440));
         max-width: calc(375px * var(--multiplier-1440));
-        padding: calc(15px * var(--multiplier-1440)) 0px;
+        padding: calc(10px * var(--multiplier-1440)) 0px;
         border-radius: calc(10px * var(--multiplier-1440));
         font-size: calc(35px * var(--multiplier-1440));
         line-height: calc(24px * var(--multiplier-1440));
@@ -633,7 +644,7 @@ body {
     
     .bottom-text {
         margin-top: calc(10px * var(--multiplier-1440));
-        margin-bottom: calc(23px * var(--multiplier-1440));
+        margin-bottom: calc(20px * var(--multiplier-1440));
         padding: 0px calc(10px * var(--multiplier-1440));
     }
 }
@@ -665,8 +676,8 @@ body {
     }
     
     .inner-container {   
-        gap: calc(15px * var(--multiplier-1366));
-        margin: calc(15px * var(--multiplier-1366));
+        gap: calc(10px * var(--multiplier-1366));
+        margin: calc(5px * var(--multiplier-1366));
     }
     
     .section1 {
@@ -676,10 +687,15 @@ body {
     .button1 {
         width: calc(539px * var(--multiplier-1366));
         height: calc(90px * var(--multiplier-1366));
-        padding: calc(47px * var(--multiplier-1366)) auto;
+        padding: calc(40px * var(--multiplier-1366)) auto;
         font-size: calc(16px * var(--multiplier-1366));
         line-height: calc(24px * var(--multiplier-1366));
         border-radius: calc(40px * var(--multiplier-1366));
+    }
+
+    .btn-clock{
+        width: calc(57.857px * var(--multiplier-1366));;
+        height: calc(57.857px * var(--multiplier-1366));;
     }
     
     .button-text {
@@ -712,7 +728,7 @@ body {
     .primary-btn {
         min-width: calc(250px * var(--multiplier-1366));
         max-width: calc(375px * var(--multiplier-1366));
-        padding: calc(16px * var(--multiplier-1366)) 0px;
+        padding: calc(10px * var(--multiplier-1366)) 0px;
         border-radius: calc(10px * var(--multiplier-1366));
         font-size: calc(24px * var(--multiplier-1366));
         line-height: calc(24px * var(--multiplier-1366));
@@ -759,7 +775,7 @@ body {
     }
     
     .bottom-text {
-        margin-bottom: calc(23px * var(--multiplier-1366));
+        margin-bottom: calc(20px * var(--multiplier-1366));
         padding: 0px calc(10px * var(--multiplier-1366));
     }
 }
@@ -806,6 +822,11 @@ body {
         font-size: calc(16px * var(--multiplier-1280));
         line-height: calc(24px * var(--multiplier-1280));
         border-radius: calc(40px * var(--multiplier-1280));
+    }
+
+    .btn-clock{
+        width: calc(57.857px * var(--multiplier-1280));
+        height: calc(57.857px * var(--multiplier-1280));
     }
     
     .button-text {
