--- a/styles/widgets.css
+++ b/styles/widgets.css
@@ -214,7 +214,7 @@ body {
 
 @media screen and (min-width:1440px) and (max-width:1918px) {
     .header {
-        height: calc(90px * var(--multiplier-1440));
+        height: calc(60px * var(--multiplier-1440));
         padding: 0 calc(50px * var(--multiplier-1440)) 0 calc(50px * var(--multiplier-1440));
         box-shadow: 0 4px calc(14px * var(--multiplier-1440)) 0 rgba(0, 0, 0, 0.05);
     }
@@ -261,7 +261,9 @@ body {
     }
     
     .bottom-text {
-        margin-bottom: calc(23px * var(--multiplier-1440));
+        margin-top: calc(5px * var(--multiplier-1440));
+        margin-bottom: calc(10px * var(--multiplier-1440));
+        font-size: calc(25px * var(--multiplier-1440));
         padding: 0px calc(10px * var(--multiplier-1440));
     }
 
